--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rax": "^0.6.5",
     "rax-image": "^0.6.8",
     "rax-scrollview": "^0.6.5",
+    "rax-slider": "^0.6.6-1",
     "rax-text": "^0.6.5",
     "rax-touchable": "^0.6.5",
     "rax-view": "^0.6.5",
