--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rax-text": "^0.6.5",
     "rax-touchable": "^0.6.5",
     "rax-view": "^0.6.5",
+    "tiny-pinyin": "^1.3.0",
     "universal-env": "^0.6.6",
     "universal-toast": "^0.6.5"
   },
