--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "rax-view": "^0.6.5",
     "tiny-pinyin": "^1.3.0",
     "universal-env": "^0.6.6",
-    "universal-toast": "^0.6.5"
+    "universal-toast": "^0.6.5",
+    "weex-bindingx": "^0.0.49"
   },
   "devDependencies": {
     "rax-scripts": "^0.6.5",
