--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rax-text": "^0.6.5",
     "rax-touchable": "^0.6.5",
     "rax-view": "^0.6.5",
+    "tiny-emitter": "^2.1.0",
     "tiny-pinyin": "^1.3.0",
     "universal-env": "^0.6.6",
     "universal-toast": "^0.6.5",
