增加使用频次，安装卸载应用消息

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .js --ext .jsx ./src"
   },
   "dependencies": {
+    "lodash.throttle": "^4.1.1",
     "mobx": "^5.9.0",
     "mobx-rax": "^0.6.4",
     "rax": "^0.6.5",
