--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-rax": "^0.6.4",
     "rax": "^0.6.5",
     "rax-image": "^0.6.8",
+    "rax-modal": "^0.6.5",
     "rax-scrollview": "^0.6.5",
     "rax-slider": "^0.6.6-1",
     "rax-text": "^0.6.5",
@@ -20,6 +21,7 @@
     "rax-view": "^0.6.5",
     "tiny-emitter": "^2.1.0",
     "tiny-pinyin": "^1.3.0",
+    "universal-asyncstorage": "^0.6.5",
     "universal-env": "^0.6.6",
     "universal-toast": "^0.6.5",
     "weex-bindingx": "^0.0.49"
